ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Activity/fields/CnP_PaaS__SMS_Account_SID__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__SMS_Account_SID__c</fullName>
    <label>SMS Account SID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>