ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Activity/fields/CnP_PaaS__SMS_Auth_Token__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__SMS_Auth_Token__c</fullName>
    <label>SMS Auth Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>