ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Activity/fields/CnP_PaaS__SMS_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__SMS_Error_Code__c</fullName>
    <label>SMS Error Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>