ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Activity/fields/CnP_PaaS__SMS_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__SMS_Error_Message__c</fullName>
    <label>SMS Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>