ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Activity/fields/CnP_PaaS__SMS_Sent_From__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__SMS_Sent_From__c</fullName>
    <label>SMS Sent From</label>
    <type>Phone</type>
</CustomField>