ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Activity/fields/CnP_PaaS__SMS_Sent_To__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__SMS_Sent_To__c</fullName>
    <label>SMS Sent To</label>
    <type>Phone</type>
</CustomField>